# NetworkConfigPro

./: .gitignore  LINKEDIN_POST.md  README.md  main.py  pyproject.toml  requirements.txt  sample_junos_project.ncpro  sample_project.ncpro
src/: __init__.py
src/core/: __init__.py  models.py
src/core/generators/: __init__.py  config_generator.py
src/core/parsers/: __init__.py  config_parser.py
src/core/templates/: __init__.py
src/core/templates/vendors/: arista_eos.j2  cisco_ios.j2  cisco_nxos.j2  juniper_junos.j2  sonic.j2
src/core/validators/: __init__.py  config_validator.py
src/gui/: __init__.py  app.py  help_content.py  theme.py
src/security/: __init__.py  vault.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_generator.py  test_models.py  test_parser.py  test_sonic.py  test_validator.py  test_vault.py
